# cppgrad-tensor

./: CMakeLists.txt  README.md  original.hpp  test  test.cpp
benchmarks/: CMakeLists.txt
benchmarks/src/: blas_dot_benchmark.cpp  blas_matmul_benchmark.cpp  blas_tensordot_benchmark.cpp  dot_benchmark.cpp  matmul_benchmark.cpp  tensordot_benchmark.cpp  transpose_benchmark.cpp
include/: tensor.hpp
include/cppgrad/: elementwise_ops.hpp  tensor.hpp  types.hpp
include/cppgrad_tensor/: cppgrad_tensor.hpp  elementwise_ops.hpp  tensor.hpp  types.hpp
output/: test
output/test.dSYM/Contents/Resources/DWARF/: test
output/test.dSYM/Contents/Resources/Relocations/aarch64/: test.yml
src/: blas.cpp  tensor.cpp  tensor_ops.cpp
test/: examples.cpp
